fixed column sizes not stretching to the whole space

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -122,7 +122,6 @@ blockquote { border-left: 0.3rem solid $tertiary!important; }
     flex-wrap: wrap;
     .column {
       flex-basis: 50%!important;
-      flex-grow: 0!important;
       padding: 1rem!important;
     }
   }
